--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,10 +5,13 @@
     outline: none;
     border: 2px solid #000;
 }
-.cell {
+.cell, .body-cell {
     width: 30px;
     height: 30px;
     float: left;
     overflow: hidden;
     box-sizing: border-box;
+}
+.body-cell {
+    background-color: #000;
 }
