--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,7 +5,7 @@
     outline: none;
     border: 2px solid #000;
 }
-.cell, .body-cell {
+.cell, .body-cell, .food-cell {
     width: 30px;
     height: 30px;
     float: left;
@@ -14,4 +14,7 @@
 }
 .body-cell {
     background-color: #000;
+}
+.food-cell {
+    background-color: red;
 }
